--- a/_notebooks/2025-03-26-transitions.ipynb
+++ b/_notebooks/2025-03-26-transitions.ipynb
@@ -10,7 +10,7 @@
    "source": [
     "---\n",
     "layout: post\n",
-    "title: Parallaxes/background \n",
+    "title: Parallaxes/Transitions \n",
     "description: Lesson to teach others\n",
     "comments: true\n",
     "permalink: /csse/lessons/two\n",
