--- a/_notebooks/2025-05-06-Game_Loop_Hack.ipynb
+++ b/_notebooks/2025-05-06-Game_Loop_Hack.ipynb
@@ -1,8 +1,25 @@
 {
  "cells": [
   {
+   "cell_type": "raw",
+   "metadata": {
+    "vscode": {
+     "languageId": "raw"
+    }
+   },
+   "source": [
+    "---\n",
+    "layout: tailwindPost\n",
+    "title: Game Loop Hack\n",
+    "description: Infograph to inform others\n",
+    "comments: true\n",
+    "permalink: /gamify/adventureGame/loophack\n",
+    "---"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "vscode": {
      "languageId": "html"
