--- a/_notebooks/2025-06-22-Effect.ipynb
+++ b/_notebooks/2025-06-22-Effect.ipynb
@@ -11,11 +11,11 @@
     "---\n",
     "layout: post\n",
     "categories: [Adventure Game]\n",
-    "title: Overworld Level Hacks\n",
+    "title: Overworld Level Hacks Effects\n",
     "description: Overworld Hacks\n",
     "type: issues \n",
     "comments: true\n",
-    "permalink: /overworld/EnemyCollisionHacks\n",
+    "permalink: /overworld/EnemyCollisionHackSkibs\n",
     "---"
    ]
   },
