--- a/_notebooks/2025-06-22-Projectiles.ipynb
+++ b/_notebooks/2025-06-22-Projectiles.ipynb
@@ -11,7 +11,7 @@
     "---\n",
     "layout: post\n",
     "categories: [Adventure Game]\n",
-    "title: Overworld Level Hacks\n",
+    "title: Overworld Level Hacks Projectiles\n",
     "description: Overworld Hacks\n",
     "type: issues \n",
     "comments: true\n",
