--- a/_notebooks/2025-04-07-blocks.ipynb
+++ b/_notebooks/2025-04-07-blocks.ipynb
@@ -1,6 +1,23 @@
 {
  "cells": [
   {
+   "cell_type": "raw",
+   "metadata": {
+    "vscode": {
+     "languageId": "raw"
+    }
+   },
+   "source": [
+    "---\n",
+    "layout: post\n",
+    "title: Parallaxes/blocks \n",
+    "description: Lesson to teach others\n",
+    "comments: true\n",
+    "permalink: /csse/lessons/one\n",
+    "---"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
